--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>ddvudo</groupId>
     <artifactId>TestWeb</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -14,8 +14,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <fastjson.version>1.2.58</fastjson.version>
-        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-        <maven-compiler-plugin.CompileLevel>1.8</maven-compiler-plugin.CompileLevel>
     </properties>
     <dependencies>
         <dependency>
