--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoR
 db.driverclass=com.mysql.cj.jdbc.Driver
 db.user=how2j
 db.password=liukang
+# 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
+spring.mvc.hiddenmethod.filter=true
 # 暴露所有actuator端点
 management.endpoints.web.exposure.include=*
 # 显示所有详细信息
@@ -11,7 +13,7 @@ server.port=80
 # 定位页面的目录到static/下
 #spring.mvc.view.prefix=/
 #spring.mvc.view.suffix=.html
-spring.datasource.druid.filter.slf4j.enabled=true
+spring.datasource.druid.filter.slf4j.enabled=false
 spring.datasource.druid.filter.slf4j.statement-create-after-log-enabled=false
 spring.datasource.druid.filter.slf4j.statement-close-after-log-enabled=false
 spring.datasource.druid.filter.slf4j.result-set-open-after-log-enabled=false
