--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
             <artifactId>minio</artifactId>
             <version>6.0.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
