--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-# db.jdbcUrl=jdbc:mysql://188.131.157.4:3306/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-# db.driverclass=com.mysql.cj.jdbc.Driver
+# 设置端口号
+server.port=80
+# 数据库配置
 ddvudo.datasource.jdbcUrl=jdbc:postgresql://188.131.157.4:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-ddvudo.datasource.driverclass=org.postgresql.Driver
+ddvudo.datasource.driverClass=org.postgresql.Driver
 ddvudo.datasource.user=postgres
 ddvudo.datasource.password=liukang951006
 # 文件存储配置
@@ -19,21 +20,21 @@ spring.mvc.hiddenmethod.filter=true
 management.endpoints.web.exposure.include=*
 # 显示所有详细信息
 management.endpoint.health.show-details=always
-# 设置端口号
-server.port=80
 # 定位页面的目录到static/下
 #spring.mvc.view.prefix=/
 #spring.mvc.view.suffix=.html
+####################
 # 分页配置
 pagehelper.reasonable=true
-# 文件傻上传配置
+####################
+# 文件上传配置
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
-#---------------
+#####################
+spring.redis.host=188.131.157.4
+spring.redis.password=liukang951006
+#####################
+spring.session.timeout=3600
 spring.session.store-type=redis
-spring.datasource.druid.filter.slf4j.enabled=false
-spring.datasource.druid.filter.slf4j.statement-create-after-log-enabled=false
-spring.datasource.druid.filter.slf4j.statement-close-after-log-enabled=false
-spring.datasource.druid.filter.slf4j.result-set-open-after-log-enabled=false
-spring.datasource.druid.filter.slf4j.result-set-close-after-log-enabled=false
+spring.session.redis.cleanup-cron=0 * 1 * * *
