--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,13 @@ ddvudo.MinIO.endpoint=http://188.131.157.4:9000/
 ddvudo.MinIO.accessKey=admin
 ddvudo.MinIO.secretKey=liukang951006
 # 错误页面
+server.error.include-exception=true
 server.error.path=/sa-html/cfg/500.html
+server.error.include-stacktrace=always
+server.error.whitelabel.enabled=true
 # 日志级别
 logging.level.root=INFO
 logging.level.io.lettuce=OFF
-logging.level.org.springframework.context.support=OFF
 logging.level.ORM.Mapper=DEBUG
 # 开启put和delete方法,源码在springboot2内置的WebMvcAutoConfiguration类中注册的hiddenHttpMethodFilter()方法
 spring.mvc.hiddenmethod.filter=true
