--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 # 设置端口号
 server.port=80
 # 数据库配置
-ddvudo.datasource.jdbcUrl=jdbc:postgresql://ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
-ddvudo.datasource.driverClass=org.postgresql.Driver
-ddvudo.datasource.user=postgres
-ddvudo.datasource.password=liukang951006
+spring.datasource.druid.url=jdbc:postgresql://ddvudo.top:5432/how2jdb?characterEncoding=UTF-8&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.druid.driver-class-name=org.postgresql.Driver
+spring.datasource.druid.username=postgres
+spring.datasource.druid.password=liukang951006
+spring.datasource.druid.max-active=10
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.initial-size=5
+mybatis.mapper-locations=classpath:ORM/Mapper/*.xml
 # 文件存储配置
 ddvudo.MinIO.endpoint=http://188.131.157.4:9000/
 ddvudo.MinIO.accessKey=admin
@@ -24,9 +30,6 @@ spring.mvc.hiddenmethod.filter=true
 management.endpoints.web.exposure.include=*
 # 显示所有详细信息
 management.endpoint.health.show-details=always
-# 定位页面的目录到static/下
-#spring.mvc.view.prefix=/
-#spring.mvc.view.suffix=.html
 server.compression.enabled=true
 ####################
 # 分页配置
