--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,7 @@ spring.redis.password=liukang951006
 #####################
 spring.session.timeout=3600
 spring.session.store-type=redis
+#####################
+server.ssl.enabled=true
+server.ssl.key-store=classpath:ddvudo.top.keystore
+server.ssl.key-store-password=123456
